feat: 抽出共享源码层并降到 Java 8，为 1.8.9+Forge 双版本做准备 (v2.3.0-forge)
目标：从这一版起同时维护 Fabric(26.3) 与 Forge(1.8.9) 两条线，共用同一份纯逻辑。

结构改造
- 新增 src/shared/java（15 个纯逻辑类：util/ core/ config/ chat 决策），
  与 src/main/java（4 个 Fabric 装配类）分成两个源码根，build.gradle 两个根一起编译。
- 新增门禁 sharedLayerPurity()：共享层不许出现任何游戏/加载器 import。
  它当场抓到了 TranslatorConfig 里的 FabricLoader —— 已改成由装配层注入配置目录
  （setConfigDir），Fabric 侧在入口调用，Forge 侧稍后调 Loader.instance().getConfigDir()。
- Log 改成加载器无关门面（自实现 slf4j 常用子集：info/warn/error + {} 占位符），
  由装配层注入 sink：Fabric 接 slf4j，Forge 1.8.9 接 log4j。调用处一行未改。
  门面刻意用 catch (Throwable) 兜住整个出口，并在测试里断言 sink 抛异常时
  调用方不受影响 —— 这是 v2.1.0「打日志打死工作线程导致消息静默消失」的教训。

Java 8 降级（1.8.9 只支持 Java 8：无 record / 文本块 / List.of / switch 表达式）
- 7 个 record → 普通不可变类，访问器名字保持不变，调用处零改动；
- 4 个承载提示词的文本块 → 字符串拼接。值不是重新实现的，是从**已编译的类**里
  用反射导出真实字符串再生成字面量，改完复核 sha256 完全一致
  （incoming 2038 字符 / outgoing 1584 字符 / 两个迁移用尾部标记）；
- 33 处 isBlank/strip* 经脚本替换为 LangUtils 新增的语义精确复刻
  （Java 的 isBlank/strip 用 Character.isWhitespace，trim() 只认 <= ' '，
  不一致会让两条线对同一句话给出不同判断）；
- List.of/Set.of/Map.ofEntries → Arrays.asList/LinkedHashSet/LinkedHashMap；
- switch 表达式 → 经典 switch；Files.readString/writeString → Java 8 等价写法；
- JsonParser.parseString（Java 11 静态方法）→ new JsonParser().parse()。

工具链事实（都已实测，别再踩）
- 1.8.9 用 ForgeGradle 2.1-SNAPSHOT + Gradle 2.14.1 + JDK 8；插件 id 是
  net.minecraftforge.gradle.forge（不是 'forge'），映射只能是 stable_22
  （stable_20 对 1.8.9 是 404，官方 MDK 的默认值已失效）。
- 老 Gradle 在本机报 "Failed to load native library" 不是 glibc 问题，
  而是默认 ~/.gradle 与 /tmp 不可用 —— 与 Fabric 线同一个坑，
  把 GRADLE_USER_HOME/TMPDIR 指到工作区内即可。

验证
- Fabric 线 ./gradlew clean build 全绿：702 项通过 / 0 失败（v2.3.0 是 674）。
- 请求体逐字节对照：92/92 条 sha256 与降级前基线**完全一致**
  （首条 6986fe87…，与 v2.3.0 发布前记录的哈希也相同）→ 提示词一个字节没动。
- 共享层用 JDK 8 + gson 2.2.4（1.8.9 自带版本）单独编译通过（35 个 class）。
  这一步很关键：Java 25 编译会掩盖 6 处不兼容 —— JsonArray.isEmpty() /
  JsonObject.keySet()（gson 2.2.4 没有）、StringBuilder.isEmpty()（Java 15）、
  ByteArrayOutputStream.toString(Charset)（Java 10）、
  菱形 + 匿名类（Java 9 才允许）。
- tools/V